--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.4.1",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"eslint": "^7.32.0",
@@ -30,6 +31,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"node-fetch": "^3.1.1"
+		"cookie": "^0.4.1"
 	}
 }
